[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/placeholder char.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/placeholder baguette.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 2 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PreemptiveTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Baguette" type="Area2D" parent="."]
position = Vector2( 8, 0 )
collision_layer = 0
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Baguette"]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Baguette"]
shape = SubResource( 3 )
disabled = true

[node name="AttackTimer" type="Timer" parent="Baguette"]
wait_time = 0.5
one_shot = true
